<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">New layer</string>
    <string name="action_add_local">Open local</string>
    <string name="general">General</string>
    <string name="general_summary">General settings</string>
    <string name="keep_screen_on">Keep map screen on</string>
    <string name="keep_screen_on_summary">Do not turn off screen</string>
    <string name="show_scale_ruler">Show scale ruler</string>
    <string name="show_ruler_measuring">Show measuring button</string>
    <string name="show_zoom_controls">Show zoom controls</string>
    <string name="show_zoom_controls_summary">Show zoom in/zoom out control on the map</string>
    <string name="show_compass">Show mini compass</string>
    <string name="map">Map</string>
    <string name="map_summary">Map settings</string>
    <string name="app_description">Mobile GIS application for spatial field data collection and sending it back to server. NextGIS Mobile also records tracks and sends position information to web server.</string>
    <string name="credits_intro">Credits</string>
    <string name="credits">Some icons used in the application are from <a href="http://icons8.com/android-icons">Icons8.com</a> licensed under a <a href="http://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0 license</a>, <a href="http://materialdesignicons.com/">materialdesignicons.com</a> and <a href="http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html">romannurik.github.io</a> licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0 license</a></string>
    <string name="copyright" translatable="false"><![CDATA[© <a href=\"https://nextgis.com\">NextGIS</a>, 2012–%s]]></string>
    <string name="contacts"><a href="https://nextgis.com/contact/">Contact us</a></string>
    <string name="action_about">About</string>
    <string name="add_current_place">Add current place</string>
    <string name="add_new_geometry">Add new geometry</string>
    <string name="add_geometry_by_walk">Add geometry by walking</string>
    <string name="warning_no_edit_layers">No editable layers</string>
    <string name="select_layer">Select layer to edit</string>
    <string name="menu_locate">Locate</string>
    <string name="allow_map_rotation">Allow map rotation</string>
    <string name="disable_map_rotation">Disable map rotation</string>
    <string name="select_file">Select file to create layer</string>
    <string name="warning_install_file_manager">Please install a File Manager</string>
    <string name="error_file_unsupported">File type is not supported</string>
    <string name="warning_not_implemented">Not implemented yet</string>
    <string name="pref_location_accuracy">Location accuracy</string>
    <string name="pref_location_accuracy_gps">GPS</string>
    <string name="pref_location_accuracy_cell">Other networks</string>
    <string name="gnss_input_title">Location source</string>
    <string name="gnss_input_system">Android system GNSS</string>
    <string name="gnss_input_external">External GNSS</string>
    <string name="gnss_external_title">External GNSS</string>
    <string name="gnss_external_summary">Find a receiver and read NMEA directly</string>
    <string name="gnss_transport_title">Connection</string>
    <string name="gnss_transport_bluetooth_classic">Bluetooth Classic</string>
    <string name="gnss_transport_bluetooth_le">Bluetooth LE</string>
    <string name="gnss_transport_usb">USB</string>
    <string name="gnss_transport_tcp">TCP/IP</string>
    <string name="gnss_find_devices">Find devices</string>
    <string name="gnss_signal_dbm">Signal: %1$d dBm</string>
    <string name="gnss_signal_unknown">Signal not measured</string>
    <string name="gnss_signal_hint">A value closer to zero means a stronger signal: −45 dBm is stronger than −80 dBm. Find devices again to refresh.</string>
    <string name="gnss_no_devices">No devices found</string>
    <string name="gnss_tcp_host">Host</string>
    <string name="gnss_tcp_port">Port</string>
    <string name="gnss_tcp_connect">Use this address</string>
    <string name="gnss_tcp_host_required">Enter the receiver address</string>
    <string name="gnss_bluetooth_permission">Bluetooth access is required to find a receiver</string>
    <string name="gnss_hud_connecting">Connecting…</string>
    <string name="gnss_hud_no_device">Choose a receiver in Settings</string>
    <string name="gnss_hud_no_fix">No fix</string>
    <string name="gnss_hud_quality_fix">Fix</string>
    <string name="gnss_hud_quality_float">Float</string>
    <string name="gnss_hud_quality_auto">Auto</string>
    <string name="gnss_hud_quality_dgps">DGPS</string>
    <string name="gnss_hud_sats_hdop">%1$d  HDOP %2$s</string>
    <string name="location">Location</string>
    <string name="track_restore">Restore current track after reboot</string>
    <string name="background_recording_sound">Background recording sound</string>
    <string name="background_recording_sound_summary">While the app is in the background, a sound every 10 seconds confirms that recording is on and fresh locations are still arriving</string>
    <string name="tracks_reload">Restart current track to apply changes</string>
    <string name="pref_min_time">Minimum update time</string>
    <string name="pref_min_distance">Minimum update distance</string>
    <string name="meters">m</string>
    <string name="seconds">s</string>
    <string name="coordinates_format">Coordinates format</string>
    <string name="coordinates_fraction_digits">Decimal places</string>
    <string name="select_coordinates_format">Select coordinates format</string>
    <string name="coordinates_format_summary">Coordinate text format</string>
    <string name="photo_attachments_category">Photo attachments</string>
    <string name="photo_overlay_enabled">Stamp coordinates on photos</string>
    <string name="photo_overlay_enabled_summary">Burns WGS84 coordinates onto new photo attachments. Coordinate display format uses the settings above. GPS coordinates are also written to EXIF.</string>
    <string name="photo_overlay_use_object_coords">Use object coordinates</string>
    <string name="photo_overlay_show_time">Show capture time on photo</string>
    <string name="map_bg">Map background</string>
    <string name="map_bg_light">Light</string>
    <string name="map_bg_neutral">Neutral</string>
    <string name="map_bg_dark">Dark</string>
    <string name="map_path">Map path</string>
    <string name="map_path_summary">The path to map data folder. Changing map folder may prevent data removal after application is uninstalled.</string>
    <string name="select_map_path">Select map folder path</string>
    <string name="moving">Moving…</string>
    <string name="warning_map_moving">Dangerous operation! Don\'t cancel it or kill the application during the data transfer to the new location! Your data may be broken or lost!</string>
    <string name="warning_folder_should_be_empty">The folder should be empty. Canceling operation.</string>
    <string name="frequentest">, as frequent as possible</string>
    <string name="compass_vibrate">Vibrate on bezel touch</string>
    <string name="compass_true_north">Show true north</string>
    <string name="compass_magnetic">Show magnetic</string>
    <string name="compass_keep_screen">Keep compass screen on</string>
    <string name="accurate_measures_count">Count of GPS measures</string>
    <string name="action_delete">Delete</string>
    <string name="action_attributes">Attributes</string>
    <string name="show_status_panel">Show status info panel</string>
    <string name="show_current_location">Show current location</string>
    <string name="edit_layer">Edit \'%s\' layer</string>
    <string name="action_start_layer_edit">Edit layer</string>
    <string name="features_count_attributes">%1$d of %2$d</string>
    <string name="coordinates">Coordinates</string>
    <string name="length">Length</string>
    <string name="center">Center</string>
    <string name="area">Area</string>
    <string name="perimeter">Perimeter</string>
    <string name="compass_title">Compass</string>
    <string name="refresh">Refresh</string>
    <string name="points_for_edit">Points (can be edited)</string>
    <string name="lines_for_edit">Lines (can be edited)</string>
    <string name="polygons_for_edit">Polygons (can be edited)</string>
    <string name="press_aback_again">Press back again to exit</string>
    <string name="interface_title">Interface</string>
    <string name="theme">Theme</string>
    <string name="reset_settings">Reset to defaults</string>
    <string name="reset_settings_title">Confirm?</string>
    <string name="reset_settings_message">All layers will be deleted! Only initial layers will be restored.</string>
    <string name="action_point_by_tap">Create new point</string>
    <string name="new_field">New field</string>
    <string name="empty_name">Name can not be empty</string>
    <string name="same_field_name">There is already a field with the same name</string>
    <string name="same_layer_name">There is already a layer with the same name</string>
    <string name="default_field_name">Description</string>
    <string name="pref_sync_notification">Show sync notification</string>
    <string name="alert_sync_turned_off">Syncing is turned off in your system settings and currently not possible. Turn back on?</string>
    <string name="alert_sync_title">Sync:</string>
    <string name="sync_failed_retry_title">Synchronization failed</string>
    <string name="sync_failed_retry_message">Synchronization failed. %1$s. Retry?</string>
    <string name="tap_to_measure">Tap on map to check points</string>
    <string name="permissions">Permissions</string>
    <string name="location_permissions">NextGIS Mobile requires location permission to show your location on the map.</string>
    <string name="account_permissions">Allow access to device accounts so Web GIS sign-in and synchronization can work. The app does not read your contacts.</string>
    <string name="permission_open_settings">Open app settings</string>
    <string name="memory_permissions">NextGIS Mobile uses media files access to create attachments (like photos) to map features.</string>
    <string name="action_support">Support</string>
    <string name="app_support">Please send us questions, bug-reports and new features suggestions. Commercial support is available.</string>
    <string name="email">Email</string>
    <string name="support">Support:</string>
    <string name="email_src">support@nextgis.com</string>
    <string name="telegram">Telegram</string>
    <string name="telegram_src">\@nextgis_talks</string>
    <string name="collector_project_switch">Switch project</string>
    <string name="project_sync_current">Synchronize current project</string>
    <string name="project_create_local">Create empty local project</string>
    <string name="project_rename">Rename project on this device</string>
    <string name="project_reset_rebuild_guard">Allow retrying stopped layer rebuilds</string>
    <string name="project_delete_local_copy">Delete project from this device</string>
    <string name="stakeout_direction">Direction to target</string>
    <string name="stakeout_waiting_for_gps">Waiting for GPS</string>
    <string name="stakeout_mute">Mute stakeout sound</string>
    <string name="stakeout_stop">Stop stakeout</string>
    <string name="azimuth_correction">Correction</string>
    <string name="azimuth_correction_decrease">Decrease correction</string>
    <string name="azimuth_correction_increase">Increase correction</string>
    <string name="azimuth_correction_minus">−</string>
    <string name="azimuth_correction_plus">+</string>
    <string name="azimuth_correction_reset">Reset</string>
</resources>